--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
+    "echarts": "^4.2.1",
     "esri-loader": "^2.9.2",
+    "ngx-echarts": "^4.1.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
